--- a/package.json
+++ b/package.json
@@ -59,5 +59,12 @@
     "*.{js,jsx,ts,tsx,md,mdx,json}": [
       "prettier --plugin-search-dir=. --write"
     ]
+  },
+  "jampack": {
+    "image": {
+      "svg": {
+        "optimization": false
+      }
+    }
   }
 }
